--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 django = "*"
 "psycopg2-binary" = "*"
 pillow = "*"
+redis = "*"
+sorl-thumbnail = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
