Add djangorestframework and update project dependencies

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ pillow = "*"
 redis = "*"
 sorl-thumbnail = "*"
 django-widget-tweaks = "*"
+djangorestframework = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
