Add gunicorn to project dependencies

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ sorl-thumbnail = "*"
 django-widget-tweaks = "*"
 djangorestframework = "*"
 coreapi = "*"
+gunicorn = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
