--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ djangorestframework = "*"
 coreapi = "*"
 gunicorn = "*"
 django-autocomplete-light = "*"
+django-filter = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
