--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,6 @@ name = "pypi"
 
 [packages]
 django = "*"
-"psycopg2-binary" = "*"
 pillow = "*"
 redis = "*"
 sorl-thumbnail = "*"
@@ -15,6 +14,7 @@ coreapi = "*"
 gunicorn = "*"
 django-autocomplete-light = "*"
 django-filter = "*"
+psycopg2 = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
