--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ gunicorn = "*"
 django-autocomplete-light = "*"
 django-filter = "*"
 psycopg2 = "*"
+python-memcached = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
