--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ gunicorn = "*"
 django-autocomplete-light = "*"
 django-filter = "*"
 psycopg2 = "*"
+boto3 = "*"
+django-storages = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
