Add python-decouple to project

--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ django-filter = "*"
 psycopg2 = "*"
 boto3 = "*"
 django-storages = "*"
+python-decouple = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
