Add chartkick as a dependency
Update existing dependencies

--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ psycopg2 = "*"
 boto3 = "*"
 django-storages = "*"
 python-decouple = "*"
+chartkick = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
