Rollback django-autocomplete-light
Inlines seem to be broken:

https://github.com/yourlabs/django-autocomplete-light/issues/1110

--- a/Pipfile
+++ b/Pipfile
@@ -12,13 +12,13 @@ django-widget-tweaks = "*"
 djangorestframework = "*"
 coreapi = "*"
 gunicorn = "*"
-django-autocomplete-light = "*"
 django-filter = "*"
 psycopg2 = "*"
 boto3 = "*"
 django-storages = "*"
 python-decouple = "*"
 chartkick = "*"
+django-autocomplete-light = "==3.3.5"
 
 [dev-packages]
 django-debug-toolbar = "*"
