--- a/Pipfile
+++ b/Pipfile
@@ -18,7 +18,7 @@ boto3 = "*"
 django-storages = "*"
 python-decouple = "*"
 chartkick = "*"
-django-autocomplete-light = "==3.3.5"
+django-autocomplete-light = "*"
 django-simple-bulma = "*"
 
 [dev-packages]
