--- a/Pipfile
+++ b/Pipfile
@@ -15,7 +15,7 @@ gunicorn = "*"
 django-filter = "*"
 psycopg2 = "*"
 boto3 = "*"
-django-storages = "*"
+django-storages = "==1.8"
 python-decouple = "*"
 chartkick = "*"
 django-autocomplete-light = "*"
