--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "==3.0.9"
+django = "==3.0.*"
 pillow = "*"
 redis = "*"
 sorl-thumbnail = "*"
