Add cors for analytics

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ chartkick = "*"
 django-autocomplete-light = "*"
 django-simple-bulma = "*"
 drf-spectacular = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
