--- a/Pipfile
+++ b/Pipfile
@@ -32,7 +32,6 @@ pylint-django = "*"
 flake8 = "*"
 pytest-xdist = "*"
 pytest-cov = "*"
-black = "*"
 pre-commit = "*"
 isort = "*"
 seed-isort-config = "*"
@@ -41,4 +40,4 @@ seed-isort-config = "*"
 python_version = "3.8"
 
 [pipenv]
-allow_prereleases = true
+allow_prereleases = false
