Add dep on django-searchable-select

--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ drf-spectacular = "*"
 django-simple-history = "*"
 serifan = "*"
 esak = "*"
+django-searchable-select = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
