Add ruff for linting

--- a/Pipfile
+++ b/Pipfile
@@ -22,17 +22,14 @@ django-simple-bulma = "<=2.4"
 django-select2 = "*"
 chartkick = "*"
 imagehash = "*"
+ruff = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
 coverage = "*"
-pylint = "*"
-pylint-django = "*"
-flake8 = "*"
 pytest-xdist = "*"
 pytest-cov = "*"
 pre-commit = "*"
-isort = "*"
 seed-isort-config = "*"
 pytest-django = "*"
 black = "*"
