--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,18 @@ default_section = "THIRDPARTY"
 known_first_party = []
 known_third_party = ["PIL", "chartkick", "dal", "decouple", "django", "django_filters", "django_select2", "drf_spectacular", "imagehash", "pytest", "pytest_django", "rest_framework", "sorl", "storages"]
 
+[tool.ruff]
+fix = true
+line-length = 95
+show-fixes = true
+target-version = "py310"
+ignore = ["A003",]
+select = ["A", "DJ", "E", "F", "I", "UP"]
+
+[tool.ruff.per-file-ignores]
+"users/migrations/*.py" = ["E501"]
+"comicsdb/migrations/*.py" = ["E501"]
+
 [tool.coverage.run]
 source = ["comicsdb", "users", "metron"]
 
