--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ fix = true
 line-length = 95
 show-fixes = true
 target-version = "py310"
-ignore = ["A003", "RUF012", "SLF001"]
+ignore = ["A003", "RUF012", "SLF001", "ISC001"]
 select = [
     "A",
     "B",
@@ -54,14 +54,12 @@ ban-relative-imports = "all"
 [tool.ruff.isort]
 combine-as-imports = true
 
-
 [tool.ruff.per-file-ignores]
 "users/migrations/*.py" = ["E501", "N806"]
 "comicsdb/migrations/*.py" = ["E501", "N806"]
 "comicsdb/tests/*.py" = ["PLR2004", "PT004", "S101"]
 "metron/tests.py" = ["S101"]
 "users/tests/*.py" = ["S101"]
-
 
 [tool.coverage.run]
 source = ["comicsdb", "users", "metron"]
