Update django-simple-bulma to 2.5.0
- Note: Don't use the Calendar widget due to this bug:

https://github.com/lemonsaurus/django-simple-bulma/issues/85

--- a/Pipfile
+++ b/Pipfile
@@ -17,7 +17,7 @@ django-storages = "*"
 python-decouple = "*"
 django-autocomplete-light = "*"
 drf-spectacular = "*"
-django-simple-bulma = "<=2.4"
+django-simple-bulma = "*"
 django-select2 = "*"
 chartkick = "*"
 imagehash = "*"
