Switch to psycopg3

--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,6 @@ sorl-thumbnail = "*"
 djangorestframework = "*"
 gunicorn = "*"
 django-filter = "*"
-psycopg2 = "*"
 boto3 = "*"
 django-storages = "*"
 python-decouple = "*"
@@ -21,6 +20,7 @@ django-simple-bulma = "*"
 django-select2 = "*"
 chartkick = "*"
 imagehash = "*"
+psycopg = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
