--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,9 +3,13 @@ repos:
     rev: v2.2.0
     hooks:
       - id: seed-isort-config
+  - repo: https://github.com/ambv/black
+    rev: 23.7.0
+    hooks:
+    - id: black
+      language_version: python3.10
   - repo: https://github.com/astral-sh/ruff-pre-commit
     # Ruff version.
-    rev: v0.2.0
+    rev: v0.0.282
     hooks:
       - id: ruff
-      - id: ruff-format
