--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ fix = true
 line-length = 95
 show-fixes = true
 target-version = "py310"
-lint.ignore = ["A003", "RUF012", "SLF001", "ISC001", "G004"]  # TODO: Look at modifying logging f-strings.
-lint.select = [
+ignore = ["A003", "RUF012", "SLF001", "ISC001"]
+select = [
     "A",
     "B",
     "BLE",
@@ -48,13 +48,13 @@ lint.select = [
     "YTT",
 ]
 
-[tool.ruff.lint.flake8-tidy-imports]
+[tool.ruff.flake8-tidy-imports]
 ban-relative-imports = "all"
 
-[tool.ruff.lint.isort]
+[tool.ruff.isort]
 combine-as-imports = true
 
-[tool.ruff.lint.per-file-ignores]
+[tool.ruff.per-file-ignores]
 "users/migrations/*.py" = ["E501", "N806"]
 "comicsdb/migrations/*.py" = ["E501", "N806"]
 "comicsdb/tests/*.py" = ["PLR2004", "PT004", "S101"]
