--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ fix = true
 line-length = 95
 show-fixes = true
 target-version = "py310"
-ignore = ["A003", "RUF012", "SLF001", "ISC001"]
+lint.ignore = ["A003", "RUF012", "SLF001", "ISC001"]
 select = [
     "A",
     "B",
@@ -48,13 +48,13 @@ select = [
     "YTT",
 ]
 
-[tool.ruff.flake8-tidy-imports]
+[tool.ruff.lint.flake8-tidy-imports]
 ban-relative-imports = "all"
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 combine-as-imports = true
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "users/migrations/*.py" = ["E501", "N806"]
 "comicsdb/migrations/*.py" = ["E501", "N806"]
 "comicsdb/tests/*.py" = ["PLR2004", "PT004", "S101"]
