--- a/comicsdb/fixtures/series_type.yaml
+++ b/comicsdb/fixtures/series_type.yaml
@@ -46,3 +46,9 @@
     name: Limited Series
     notes: 'Typically a mini or maxi series.'
     modified: 2022-12-03 15:55:06.888335+00:00
+- model: comicsdb.seriestype
+  pk: 12
+  fields:
+    name: Digital Chapters
+    notes: 'A digital-only release.'
+    modified: 2023-05-03 07:15:06.888335+00:00
