Add some pytest/coverage configs

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,4 @@
 DJANGO_SETTINGS_MODULE=metron.settings
 python_files = tests.py test_*.py
 # Let's speed it up by running it with 2 cpu's
-addopts=-n4
+addopts=-n4 -ra --strict-config --strict-markers --cov --cov-report=html --cov-report=term
