--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,8 +54,13 @@ combine-as-imports = true
 "metron/tests.py" = ["S101"]
 "users/tests/*.py" = ["S101"]
 
+[tool.coverage.html]
+directory = "test-results/coverage"
+
 [tool.coverage.run]
 source = ["comicsdb", "users", "metron"]
+branch = true
+concurrency = ["multiprocessing"]
 
 [tool.coverage.report]
 show_missing = true
