--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,14 +2,6 @@
 line-length = 95
 target-version = ["py310"]
 
-[tool.isort]
-profile = "black"
-multi_line_output = 3
-line_length = 95
-default_section = "THIRDPARTY"
-known_first_party = []
-known_third_party = ["PIL", "chartkick", "dal", "decouple", "django", "django_filters", "django_select2", "drf_spectacular", "imagehash", "pytest", "pytest_django", "rest_framework", "sorl", "storages"]
-
 [tool.ruff]
 fix = true
 line-length = 95
@@ -56,13 +48,19 @@ combine-as-imports = true
 
 [tool.ruff.lint.per-file-ignores]
 "users/migrations/*.py" = ["E501", "N806"]
+"comicsdb/models/__init__.py" = ["I001"]
 "comicsdb/migrations/*.py" = ["E501", "N806"]
 "comicsdb/tests/*.py" = ["PLR2004", "PT004", "S101"]
 "metron/tests.py" = ["S101"]
 "users/tests/*.py" = ["S101"]
 
+[tool.coverage.html]
+directory = "test-results/coverage"
+
 [tool.coverage.run]
 source = ["comicsdb", "users", "metron"]
+branch = true
+concurrency = ["multiprocessing"]
 
 [tool.coverage.report]
 show_missing = true
