--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
+django = "<5.1.0"
 pillow = "*"
 redis = "*"
 sorl-thumbnail = "*"
@@ -31,6 +31,7 @@ pre-commit = "*"
 seed-isort-config = "*"
 pytest-django = "*"
 ruff = "*"
+djlint = "*"
 
 [requires]
 python_version = "3.10"
